grammar.js
    module: $ => seq(optional($._code_cell_content), repeat(choice(
      $._code_cell, $.markdown_cell, $.raw_cell,
    ))),
    _code_cell: $ => seq($.cell_marker, $._cell_header_end, optional($._code_cell_content)),
    _code_cell_content: $ => choice($.cell_magic, repeat1(choice($._statement, alias($._prefix_comment, $.comment)))),

    markdown_cell: $ => seq(
      field('marker', alias($._markdown_cell_header, $.cell_marker)),
      $._cell_header_end,
      optional(field('body', $.cell_body)),
    ),

    raw_cell: $ => seq(
      field('marker', alias($._raw_cell_header, $.cell_marker)),
      $._cell_header_end,
      optional(field('body', $.cell_body)),
    ),

    // Hidden bounded leaves keep incremental tokenization local without
    // exposing a node for every line to consumers or injection callbacks.
    cell_body: $ => repeat1(choice($._cell_body_chunk, $._body_prefix)),
    _body_prefix: $ => seq(choice($._prefix_hash, $._body_hash), repeat($._prefix_space)),

    cell_magic: $ => choice(
      seq(
        alias($._python_cell_magic, '%%'),
        field('name', $.cell_magic_name),
        optional(seq(repeat1($._header_space), optional(field('arguments', $.cell_magic_arguments)))),
        $._cell_header_end,
        optional(field('body', $.python_cell_body)),
      ),
      seq(
        alias($._foreign_cell_magic, '%%'),
        field('name', $.cell_magic_name),
        optional(seq(repeat1($._header_space), optional(field('arguments', $.cell_magic_arguments)))),
        $._cell_header_end,
        optional(field('body', $.cell_body)),
      ),
    ),

    cell_magic_name: _ => token.immediate(choice(/[a-zA-Z_][a-zA-Z_0-9]*/, '!')),
    cell_magic_arguments: _ => token.immediate(/[^\r\n]+/),
    python_cell_body: $ => repeat1(choice($._statement, alias($._prefix_comment, $.comment))),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    cell_marker_marker: $ => seq(
      choice($._prefix_hash, $._marker_hash),
      repeat($._prefix_space),
      $._prefix_percent_start,
      repeat($._prefix_percent_more),
    ),

    cell_marker: $ => choice(
      seq(field('marker', $.cell_marker_marker), optional(seq(
        repeat($._leading_header_space), field('name', $.cell_marker_name),
      )), repeat($._trailing_header_space)),
      seq(field('marker', $.cell_marker_marker), repeat1($._leading_header_space),
        field('metadata', alias($._code_cell_type, $.cell_marker_metadata)),
        optional(seq(repeat1($._leading_header_space), field('name', $.cell_marker_name))),
        repeat($._trailing_header_space)),
    ),

    _markdown_cell_header: $ => seq(
      field('marker', $.cell_marker_marker), repeat1($._leading_header_space),
      field('metadata', alias($._markdown_cell_type, $.cell_marker_metadata)),
      optional(seq(repeat1($._leading_header_space), field('name', $.cell_marker_name))),
      repeat($._trailing_header_space),
    ),
    _raw_cell_header: $ => seq(
      field('marker', $.cell_marker_marker), repeat1($._leading_header_space),
      field('metadata', alias($._raw_cell_type, $.cell_marker_metadata)),
      optional(seq(repeat1($._leading_header_space), field('name', $.cell_marker_name))),
      repeat($._trailing_header_space),
    ),
    _leading_header_space: $ => choice($._header_space, $._uncertain_space),
    _trailing_header_space: $ => choice($._trailing_space, $._uncertain_space),
    cell_marker_name: $ => seq(repeat1($._header_title_chunk), repeat(seq(
      repeat1(choice($._title_space, $._uncertain_space)), repeat1($._header_title_chunk),
    ))),

    // Magics, shell escapes, and help requests can only win where a statement
    // may start, so modulo, comparisons, and f-string conversions remain
    // Python syntax.
    magic_statement: _ => token(seq('%', /[a-zA-Z_][^\r\n]*/)),

    shell_statement: _ => token(seq('!', /[^\r\n]*/)),

    help_statement: _ => token(choice(
      seq(/\?\??/, /[^\r\n]*/),
      seq(/[a-zA-Z_][a-zA-Z0-9_.]*/, /\?\??/),
    )),

    return_statement: $ => seq(
      'return',
      optional($._expressions),
    ),

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
    ),

    function_definition: $ => seq(
      optional('async'),
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    _not_in: _ => seq('not', 'in'),

    _is_not: _ => seq('is', 'not'),

    comparison_operator: $ => prec.left(PREC.compare, seq(
      $.primary_expression,
      repeat1(seq(
        field('operators',
          choice(
            '<',
            '<=',
            '==',
            '!=',
            '>=',
            '>',
            '<>',
            'in',
            alias($._not_in, 'not in'),
            'is',
            alias($._is_not, 'is not'),
          )),
        $.primary_expression,
      )),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
        seq('=', field('right', choice($.magic_expression, $.shell_expression))),
        seq(':', field('type', $.type), '=', field('right', choice($.magic_expression, $.shell_expression))),
      ),
    ),

    magic_expression: _ => token(seq('%', /[a-zA-Z_][^\r\n]*/)),
    shell_expression: _ => token(seq('!', /[^\r\n]*/)),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    type: $ => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
    ),
    list: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $.yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    interpolation: $ => seq(
      '{',
      field('expression', $._f_expression),
      optional('='),
      optional(field('type_conversion', $.type_conversion)),
      optional(field('format_specifier', $.format_specifier)),
      '}',
    ),

    _f_expression: $ => choice(
      $.expression,
      $.expression_list,
      $.pattern_list,
      $.yield,
    ),

    _not_escape_sequence: _ => token.immediate('\\'),

    type_conversion: _ => /![a-z]/,

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    comment: _ => token(seq('#', /[^\r\n]*/)),
    _prefix_comment: $ => seq(choice($._prefix_hash, $._comment_hash), repeat($._prefix_space), repeat($._comment_body_chunk), $._comment_end),
